--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: checkov-results
-          path: ${{ github.workspace }}/result.xml
+          path: ${{ github.workspace }}/result.html
