--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,18 +22,16 @@ jobs:
       - name: Install Checkov
         run: |
           python -m pip install --upgrade pip
-          pip3 install checkov
+          pip install checkov
 
-      # Step 4: Run Checkov to scan Terraform files
+      # Step 4: Run Checkov and generate HTML report
       - name: Run Checkov Scan
         run: |
-          checkov --version
-          ls -la ${{ github.workspace }}
-          checkov --directory ${{ github.workspace }} -o junitxml > ${{ github.workspace }}/result.xml || exit 0
+          checkov --directory ${{ github.workspace }} --output html > ${{ github.workspace }}/checkov_report.html || exit 0
 
-      # Step 5: Publish the Checkov test results
-      - name: Publish Checkov Test Results
+      # Step 5: Publish the Checkov HTML report as an artifact
+      - name: Publish Checkov HTML Report
         uses: actions/upload-artifact@v3
         with:
-          name: checkov-results
-          path: ${{ github.workspace }}/result.html
+          name: checkov-html-report
+          path: ${{ github.workspace }}/checkov_report.html
