--- a/.github/workflows/sarif.yml
+++ b/.github/workflows/sarif.yml
@@ -27,10 +27,10 @@ jobs:
       # Step 4: Run Checkov and output SARIF format
       - name: Run Checkov Scan and generate SARIF report
         run: |
-          checkov --directory ${{ github.workspace }} --output sarif > checkov-results.sarif || exit 0
+          checkov --directory ${{ github.workspace }} --output-file checkov-results.sarif --output-format sarif || exit 0
 
       # Step 5: Upload SARIF file to GitHub Security Dashboard
       - name: Upload SARIF to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3  # Updated to v3
         with:
           sarif_file: checkov-results.sarif
