--- a/.github/workflows/sarif.yml
+++ b/.github/workflows/sarif.yml
@@ -1,8 +1,9 @@
-name: Checkov Scan
+name: Checkov Scan sarif
 
 on:
   workflow_dispatch: # Allows manual trigger of the workflow
-
+permissions:
+  security-events: write
 jobs:
   checkov_scan:
     runs-on: ubuntu-latest
