--- a/.github/workflows/sarif.yml
+++ b/.github/workflows/sarif.yml
@@ -1,9 +1,11 @@
 name: Checkov Scan sarif
 
 on:
-  workflow_dispatch: # Allows manual trigger of the workflow
+  workflow_dispatch:  # Allows manual trigger of the workflow
+
 permissions:
-  security-events: write
+  security-events: write  # Grant permissions for security events
+
 jobs:
   checkov_scan:
     runs-on: ubuntu-latest
@@ -23,15 +25,20 @@ jobs:
       - name: Install Checkov
         run: |
           python -m pip install --upgrade pip
-          pip install checkov
+          pip install checkov junit2sarif
 
-      # Step 4: Run Checkov and output SARIF format
-      - name: Run Checkov Scan and generate SARIF report
+      # Step 4: Run Checkov and generate JUnit XML report
+      - name: Run Checkov Scan and generate JUnit XML report
         run: |
-          checkov --directory ${{ github.workspace }} --output-file checkov-results.sarif --output-format sarif || exit 0
+          checkov --directory ${{ github.workspace }} --output-file checkov-results.xml --output junitxml || exit 0
 
-      # Step 5: Upload SARIF file to GitHub Security Dashboard
+      # Step 5: Convert JUnit XML to SARIF
+      - name: Convert JUnit XML to SARIF
+        run: |
+          junit2sarif checkov-results.xml checkov-results.sarif
+
+      # Step 6: Upload SARIF file to GitHub Code Scanning
       - name: Upload SARIF to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v3  # Updated to v3
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: checkov-results.sarif
