--- a/.github/workflows/sarif.yml
+++ b/.github/workflows/sarif.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Checkov
         run: |
           python -m pip install --upgrade pip
-          pip install checkov junit2sarif
+          pip install checkov 
 
       # Step 4: Run Checkov and generate JUnit XML report
       - name: Run Checkov Scan and generate JUnit XML report
