--- a/.github/workflows/sarif.yml
+++ b/.github/workflows/sarif.yml
@@ -1,4 +1,4 @@
-name: Checkov Scan sarif
+name: Checkov Scan
 
 on:
   workflow_dispatch:  # Allows manual trigger of the workflow
@@ -25,19 +25,26 @@ jobs:
       - name: Install Checkov
         run: |
           python -m pip install --upgrade pip
-          pip install checkov 
+          pip install checkov
 
       # Step 4: Run Checkov and generate JUnit XML report
       - name: Run Checkov Scan and generate JUnit XML report
         run: |
           checkov --directory ${{ github.workspace }} --output-file checkov-results.xml --output junitxml || exit 0
 
-      # Step 5: Convert JUnit XML to SARIF
-      - name: Convert JUnit XML to SARIF
+      # Step 5: Manually review and print the SARIF file for debugging (Optional)
+      - name: Print SARIF file for debugging
         run: |
-          junit2sarif checkov-results.xml checkov-results.sarif
+          cat checkov-results.xml  # Review this for issues before converting to SARIF
 
-      # Step 6: Upload SARIF file to GitHub Code Scanning
+      # Step 6: Convert JUnit XML to SARIF (Try different converters if needed)
+      - name: Convert JUnit XML to SARIF
+        uses: github/sarif-standard/junit-to-sarif@v1
+        with:
+          input: checkov-results.xml
+          output: checkov-results.sarif
+
+      # Step 7: Upload SARIF file to GitHub Code Scanning (disable validation temporarily)
       - name: Upload SARIF to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
         with:
