--- a/.github/workflows/HTML.yml
+++ b/.github/workflows/HTML.yml
@@ -6,7 +6,8 @@ on:
 jobs:
   checkov_scan:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
