--- a/.github/workflows/sarif.yml
+++ b/.github/workflows/sarif.yml
@@ -1,1 +1,51 @@
+name: Checkov Scan sarif
 
+on:
+  workflow_dispatch:  # Allows manual trigger of the workflow
+
+permissions:
+  security-events: write  # Grant permissions for security events
+
+jobs:
+  checkov_scan:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Step 2: Set up Python environment
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      # Step 3: Install Checkov
+      - name: Install Checkov
+        run: |
+          python -m pip install --upgrade pip
+          pip install checkov
+
+      # Step 4: Run Checkov and generate JUnit XML report
+      - name: Run Checkov Scan and generate JUnit XML report
+        run: |
+          checkov --directory ${{ github.workspace }} --output-file checkov-results.xml --output junitxml || exit 0
+
+      # Step 5: Manually review and print the SARIF file for debugging (Optional)
+      - name: Print SARIF file for debugging
+        run: |
+          cat checkov-results.xml  # Review this for issues before converting to SARIF
+
+      # Step 6: Convert JUnit XML to SARIF (Try different converters if needed)
+      - name: Convert JUnit XML to SARIF
+        uses: github/sarif-standard/junit-to-sarif@v1
+        with:
+          input: checkov-results.xml
+          output: checkov-results.sarif
+
+      # Step 7: Upload SARIF file to GitHub Code Scanning (disable validation temporarily)
+      - name: Upload SARIF to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: checkov-results.sarif
