--- a/.github/workflows/sarif.yml
+++ b/.github/workflows/sarif.yml
@@ -1,7 +1,7 @@
 name: Checkov Scan sarif
 
 on:
-  workflow_dispatch:  # Allows manual trigger of the workflow
+  workflow_dispatch:  ## Allows manual trigger of the workflow
 
 permissions:
   security-events: write  # Grant permissions for security events
