--- a/.github/workflows/HTML.yml
+++ b/.github/workflows/HTML.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write 
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,12 +21,17 @@ jobs:
       - name: Install Checkov
         run: |
           python -m pip install --upgrade pip
-          pip install checkov
+          pip install checkov junit2html
 
-      # Run Checkov scan and generate HTML report
+      # Run Checkov scan and generate JUnit XML report
       - name: Run Checkov Scan
         run: |
-          checkov --directory ${{ github.workspace }} --output xml > checkov_report.xml || exit 0
+          checkov --directory ${{ github.workspace }} --output junitxml > checkov_report.xml || exit 0
+
+      # Convert JUnit XML to HTML for easier viewing
+      - name: Convert XML to HTML
+        run: |
+          junit2html checkov_report.xml checkov_report.html
 
       # Deploy HTML report to GitHub Pages
       - name: Deploy report to GitHub Pages
@@ -33,7 +39,7 @@ jobs:
           git config --global user.email "you@example.com"
           git config --global user.name "GitHub Actions"
           git checkout -b gh-pages
-          cp checkov_report.xml index.html
+          cp checkov_report.html index.html
           git add index.html
-          git commit -m "Update Checkov Report"
+          git commit -m "Update Checkov HTML Report"
           git push --force --set-upstream origin gh-pages
